Upgrade to trane v0.8.0

--- a/courses/basic_guitar_fretboard/course_manifest.json
+++ b/courses/basic_guitar_fretboard/course_manifest.json
@@ -18,5 +18,6 @@
     ]
   },
   "course_material": null,
-  "course_instructions": null
+  "course_instructions": null,
+  "generator_config": null
 }
