--- a/courses/advanced_guitar_fretboard/course_manifest.json
+++ b/courses/advanced_guitar_fretboard/course_manifest.json
@@ -20,5 +20,6 @@
     ]
   },
   "course_material": null,
-  "course_instructions": null
+  "course_instructions": null,
+  "generator_config": null
 }
